@@ -1,3 +1,7 @@
+2006-07-13 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j84-UNSTABLE
+
+ * NEW: Added fs_fileIsHidden() to platform functions.
+
 2006-07-12 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j83-UNSTABLE
 
  * Send_email to new users now default unchecked.
